Fix heart rate feature + make threads package-private