@@ -1,4 +1,4 @@
-package player.HRSimulation;
+package player.repository;
 
 import Simulators.Buffer;
 import Simulators.Measurement;
@@ -7,10 +7,11 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class HRBuffer implements Buffer {
-    ArrayList<Measurement> measurements = new ArrayList<>();
+    private final ArrayList<Measurement> measurements = new ArrayList<>();
     int overlap = -4;
-    public void addMeasurement(Measurement m){
-        synchronized(measurements) {
+
+    public void addMeasurement(Measurement m) {
+        synchronized (measurements) {
             overlap++;
             measurements.add(m);
             measurements.notify();
@@ -18,18 +19,19 @@ public class HRBuffer implements Buffer {
     }
 
     public List<Measurement> readAllAndClean() {
-        synchronized(measurements) {
-            while(overlap != 4) {
+        synchronized (measurements) {
+            while (overlap != 4) {
                 try {
                     measurements.wait();
-                } catch (InterruptedException e) {}
+                } catch (InterruptedException e) {
+                }
             }
 
             List<Measurement> measure = new ArrayList<>(measurements);
-            for(; 0 < overlap; --overlap) {
-                measurements.remove(0);
+            for (; 0 < overlap; --overlap) {
+                measurements.removeFirst();
             }
-            
+
             return measure;
         }
     }
